# visualizing-sorting

./: .clang-format  .gitignore  LICENSE  README.md  format.py  meson.build  run.sh
include/vis/backend/: bogo_sorter.hpp  bubble_sorter.hpp  insertion_sorter.hpp  merge_sorter.hpp  quick_sorter.hpp  sorter.hpp
include/vis/frontend/: config.hpp  sorter.hpp
src/: main.cpp  sorting.hpp
src/frontend/: config.cpp
